--- a/groups/views/groups/mygroups.pug
+++ b/groups/views/groups/mygroups.pug
@@ -6,16 +6,13 @@ block content
     h3 #{MY_GROUPS}
   .pb-2.mt-2.mb-4.border-bottom
     div(class="my-groups")
-        if groupOwner == true
-          div(class="mygroups-links")
-            a(href="group/createGroup")
-               button(type="button") #{CREATE_GROUP}
-            |#{' '}
-            a(onClick="editGroup()")
-               button(type="button") #{EDIT_GROUP}
-            |#{' '}
-            a(onClick="deleteGroup()")
-               button(type="button") #{DELETE_GROUP}
+        
+        
+        div(class="mygroups-links")
+          a(href="/createGroup")
+             button(type="button") #{CREATE_GROUP}
+          |#{' '}
+          
         #table-wrapper-scroll
             table#table(class="table  my-groups table-hover table-condensed")
                 tbody
@@ -25,54 +22,55 @@ block content
                       th #{OWNER}
                       th #{MEMBERS}
                       th #{LAST_ACTIVE}
+                      th #{Action}
                 each group in groups
                   tr(id = group.id)
                     td #{group.tit}
                     td #{group.cat}
-                    td #{group.oNa}
-                    td #{group.number}
+                    td #{group.ona}
+                    td #{group.mem.length}
                     td #{group.las}
+                    td 
+                      div(class="mygroups-links")
+                        button(type="button" onClick='editGroup("' +  group.id + '")') #{EDIT_GROUP}
+                            |#{' '}
+                        button(type="button" onClick='deleteGroup("' +  group.id + '")') #{DELETE_GROUP}
+                        button(type="button" onClick='viewGroup("' +  group.id + '")') View
     script.
-        function highlight(e) {
-            if (selected[0])
-            {
-                selected[0].className = '';
-            }
-            e.target.parentNode.className = 'selected';
-            var selectedId  = selected[0].id;
-            window.location = './group/' + selectedId;
+        
+        function viewGroup(groupId) {
+
+
+            window.location = './group/' + groupId;
         }
-        function deleteGroup()
+        function deleteGroup(groupId)
         {
-            if (selected[0]) {
-                var selectedId  = selected[0].id;
-                $.post("./group/delete/"+selectedId, function(result){
-                    var res = JSON.parse(result);
-                    if(res.success) {
+        //  console.log(e)
+        console.log(groupId);
+                $.post("./group/delete/"+groupId, function(result){
+                  
+                    console.log(result);
+                    if(result.success) {
+                    alert("group deleted!");
                         location.reload();
                     } else {
-                        alert(res.msg);
+                        alert(result.msg);
                     }
                 });
-            } else {
-                alert(PLEASE_SELECT_GROUP_TO_DELETE);
-            }
+            
         }
-        function editGroup()
+        function editGroup(groupId)
         {
-            if (selected[0]) {
-                var selectedId  = selected[0].id;
-                $.post("./editGroup/"+selectedId, function(result){
-                    var res = JSON.parse(result);
-                    if(res.success) {
-                        location.reload();
-                    } else {
-                        alert(res.msg);
-                    }
-                });
-            } else {
-                alert(PLEASE_SELECT_GROUP_TO_EDIT);
-            }
+          window.location = './editgroup/' + groupId;
+                //- $.ge("./editgroup/"+groupId, function(result){
+                //-     var res = JSON.parse(result);
+                //-     if(res.success) {
+                //-         location.reload();
+                //-     } else {
+                //-         alert(res.msg);
+                //-     }
+                //- });
+            
         }
         function selectGroup()
                 {
@@ -93,4 +91,4 @@ block content
                 }
       var table = document.getElementById('table');
       selected = table.getElementsByClassName('selected');
-      table.onclick = highlight;
+      //table.onclick = highlight;
