--- a/groups/views/layout.pug
+++ b/groups/views/layout.pug
@@ -9,6 +9,9 @@ html
     title #{title} - Hackathon Starter
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
+    script(src="https://www.google.com/recaptcha/api.js") 
+
+      
     block head
 
   body
