update the pricing table

--- a/flowerapp-frontend/src/App.css
+++ b/flowerapp-frontend/src/App.css
@@ -37,7 +37,18 @@
 .App-link {
   color: #61dafb;
 }
-
+.blue-card{
+  background-color: "#0078f2"
+}
+.yellow-card{
+  background-color: "#ff7f00"
+}
+.green-card{
+  background-color: "#7ca429"
+}
+.red-card{
+  background-color: "#cd3301"
+}
 @-webkit-keyframes App-logo-spin {
   from {
     -webkit-transform: rotate(0deg);
